--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <title>To do list</title>
   </head>
   <body>
-<h1>week day</h1>
-<h2>week day</h2>
-<h3>week day</h3>
-<h4>week day</h4>
-<h5>week day</h5>
-<h6>week day</h6>
+<h2>Type your Work in the blank space Hit the "+" to add.<br>
+You can cross items off by clicking on the boxes</h2>
   </body>
 </html>
